GT-2698 refactor JLabel -> GLabel, JComboBox -> GComboBox, renderers.